feat: enhance accessibility and improve UI components
- Updated TechPage component to include ARIA attributes and improved layout.
- Enhanced TechTabs component with keyboard navigation and ARIA roles for better accessibility.
- Modified ToolCard to include status labels and improved accessibility features.
- Updated ToolSection to use semantic HTML elements and added ARIA labels.
- Changed database connection string for sports circuit.
- Refactored schema definitions to include new ops schema and updated field types.
- Adjusted API types to reflect changes in the database schema.
- Introduced AppShell component for responsive layout with a sidebar.
- Added Dropdown component with keyboard navigation and accessibility features.
- Created Modal component with focus trap and ARIA attributes for accessibility.
- Defined shared status configuration for service statuses.
- Implemented validation schemas for categories, tools, microservices, and users.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: devops
+      POSTGRES_USER: sports
+      POSTGRES_PASSWORD: sports_secret
+      POSTGRES_DB: sports_circuit
     volumes:
       - pg-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d devops"]
+      test: ["CMD-SHELL", "pg_isready -U sports -d sports_circuit"]
       interval: 5s
       timeout: 5s
       retries: 5
