feat: add authentication middleware and routes for user login and management
- Implement JWT authentication middleware in `auth.ts`
- Create authentication routes in `auth.ts` for user login and fetching current user
- Add user management routes in `users.ts` for CRUD operations
- Introduce category management routes in `categories.ts`
- Implement microservice management routes in `microservices.ts`
- Add tool management routes in `tools.ts`
- Create health check route in `health.ts`
- Implement seeding route in `seed.ts` for initial data population
- Add frontend components for sign-in and security pages
- Set up global styles and main application structure
- Configure Vite for development and proxying API requests

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-# Database
-DATABASE_URL=postgresql://admin:secret@localhost:5432/devops
+# Database connection (used by Next.js / Drizzle)
+DATABASE_URL=postgresql://sports:sports_secret@localhost:5432/sports_circuit?search_path=ops
+
+# Database config (used by docker-compose & Flyway)
+DB_USER=sports
+DB_PASSWORD=sports_secret
+DB_NAME=sports_circuit
+DB_PORT=5432
 
 # App
 APP_ENV=local
