--- a/package.json
+++ b/package.json
@@ -50,13 +50,17 @@
     "@vitejs/plugin-react": "^4.5.2",
     "concurrently": "^9.1.2",
     "drizzle-kit": "^0.31.9",
-    "eslint": "^9.28.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint": "^9.39.3",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.20",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "typescript": "^5",
     "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1",
+    "esbuild": "^0.25.0"
   }
 }
